Refactor code in DataWriter class
Add file name, change character encoding,
set uo creation a new file every time a method is invoke